Updated tests for SlabReinforcementTest and added tests for ShearLinks